completed layout exercise

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,16 +3,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui_widget.MainActivity">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/uiWidget"
+        android:layout_width="300dp"
+        android:layout_height="0dp"
+        android:background="@drawable/buttonripple"
+        android:text="@string/taskA_button"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintBottom_toTopOf="@id/uiLayouts"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/uiLayouts"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/uiLayouts"
+        android:layout_width="300dp"
+        android:layout_height="0dp"
+        android:layout_below="@id/uiWidget"
+        android:background="@drawable/buttonripple"
+        android:text="@string/taskB_button"
+        android:textColor="@android:color/background_light"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/uiWidget" />
 </androidx.constraintlayout.widget.ConstraintLayout>
