--- a/app/src/main/res/drawable/edittext_background.xml
+++ b/app/src/main/res/drawable/edittext_background.xml
@@ -4,6 +4,10 @@
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white" />
             <stroke android:width="2dp" android:color="@color/purple_200" />
+
+            <corners android:radius="10dp"/>
+            <stroke android:width="3dp" android:color="@color/purple_200" />
+
         </shape>
     </item>
 
@@ -12,6 +16,10 @@
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white" />
             <stroke android:width="2dp" android:color="@color/teal_200" />
+
+            <solid android:color="@android:color/darker_gray" />
+            <corners android:radius="10dp"/>
+
         </shape>
     </item>
 </selector>
