--- a/app/src/main/res/layout/custom_toast.xml
+++ b/app/src/main/res/layout/custom_toast.xml
@@ -25,8 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="10dp"
-            android:contentDescription="To"
-            android:text="custom toast"
+            android:text="@string/custom_toast_button"
             android:textColor="@color/white"
             android:textSize="20sp" />
 
