--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,4 +33,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/uiWidget" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/recyclerViewAdapters"
+        android:layout_width="300dp"
+        android:layout_height="0dp"
+        android:layout_below="@id/uiWidget"
+        android:background="@drawable/buttonripple"
+        android:text="@string/taskC_button"
+        android:textColor="@android:color/background_light"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/uiLayouts" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
