--- a/app/src/main/res/drawable/buttonripple.xml
+++ b/app/src/main/res/drawable/buttonripple.xml
@@ -6,4 +6,10 @@
                 <corners android:radius="32dp"/>
             </shape>
         </item>
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/design_default_color_primary"/>
+            <corners android:radius="32dp"/>
+        </shape>
+    </item>
 </ripple>
