--- a/app/src/main/res/layout/activity_layouts.xml
+++ b/app/src/main/res/layout/activity_layouts.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     tools:context=".layout_practicals.Layouts">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center">
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/linearLayout"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="@string/linear_button"
+        android:layout_marginTop="10dp"
         android:textColor="@color/white"
         android:layout_marginBottom="10dp"
         android:background="@drawable/buttonripple" />
@@ -55,5 +60,5 @@
         android:layout_below="@id/constraintLayout"
         android:background="@drawable/buttonripple"
         android:layout_marginBottom="10dp"/>
-
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
